Dark mode CSS – Fix Select Icons (color)
true, the first one should be dark but as you said if it's disabled then the other one should be grayed out
(updated)

--- a/style/client.css
+++ b/style/client.css
@@ -3323,7 +3323,7 @@ a.ilink.yours {
 }
 
 .dark .select:disabled:after {
-	color: #000000;
+	color: #DDDDDD;
 }
 
 /* chat */
